﻿PERQemu "experiments" branch ChangeBlog


Summary of changes on the development branch since the v0.5.0 release.  Previous
notes moved to ChangeLog-Old.txt.  New entries here will be added at the top, to
avoid wasting precious time scrolling to the end. :-)


December, 2024:

    3. Sigh.  It finally became necessary to upgrade my "ancient" MacPro3,1 to
    Mac OS X 10.13, as the number of things that were no longer supported but
    still working inevitably slid into not working well enough to still get by.
    I am relieved to report that the trickery used to upgrade in place was
    successful, and the venerable old beast is still intact -- so far no issues
    or incompatibilities with the PERQemu development environment.  The baseline
    for testing on Mac OS is now Mono 6.12.0.206 on High Sierra.  Documentation
    updates will follow as I prepare to push out a new release with all of the
    new PERQ-2 disk images.  Real Soon Now.

    2. Updated the UserGuide.pdf to reflect changes/updates since v0.5.5.
    Bumped the version to v0.6.5 to roll out a final pre-release to main; after
    more extensive platform testing the v0.7.x release will include a set of
    new bundled hard disk images for use with the PERQ-2 models!

    1. A bit of refactoring for the CPUBoard/CPU to make it a tiny bit less
    weird.  Working on updates to get a next release together, hopefully before
    the end of CY2024.   Also, oh by the way, nearly got a successful floppy
    boot running the 24-bit CPU and a 20-bit installation of Accent S6 actually
    sort of ran (in 20 bit mode :-) so we might actually get to a 1.0 release
    with "PERQ 4" support way sooner than anticipated!


November, 2024:

    4. Added support for the floppy ReadID command.  POS G and Accent support
    this but I can't find any code that uses it; it's possible that some obscure
    utility for duplicating floppies might try to read the interleave pattern